[package]
name = "glass-windows"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# Don't run the lib's unit-test harness under `cargo bench` — it can't parse
# criterion args (e.g. --save-baseline) and only the [[bench]] targets matter.
[lib]
bench = false

[dependencies]
glass-core.workspace = true
glass-clip-hook = { path = "../glass-clip-hook" }
# The desktop-a11y capability signal (UI Automation creatable) reuses the a11y reader's own
# `probe_uia`. Cross-platform dep: the crate's Windows-only bits are cfg(windows)-gated, so it
# compiles on the Linux host where `capabilities()` is unit-tested.
glass-a11y-windows = { path = "../glass-a11y-windows" }

[target.'cfg(windows)'.dependencies]
windows-capture = "2"
windows = { version = "0.62", features = [
  "Win32_Foundation", "Win32_Security", "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_HiDpi", "Win32_Graphics_Dwm",
  "Win32_System_Threading",
  "Win32_System_JobObjects", "Win32_System_Diagnostics_ToolHelp",
  # clipboard: CF_UNICODETEXT global memory clipboard
  "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole",
  # doctor: session (RemoteDesktop), WGC support probe, true build via RtlGetVersion
  "Win32_System_RemoteDesktop", "Graphics_Capture",
  "Wdk_System_SystemServices", "Win32_System_SystemInformation",
  # private clipboard: host named-pipe server + scoped security descriptor
  "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_System_IO",
  "Win32_Security_Authorization",
] }

# The onbox examples + tests set Per-Monitor-V2 awareness at runtime (they carry no manifest); the
# on-box a11y tests (tests/onbox.rs) also drive the UIA reader (a normal dependency, above) to
# validate the accessibility path.
[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
# onbox.rs's Glass-session harness (glass_windows_with_a11y) needs a scratch baseline dir.
tempfile.workspace = true

# The pixel conversion is cross-platform, so its bench builds and runs everywhere.
[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "pixels"
harness = false

[lints]
workspace = true
