[package]
name = "glass-x11"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# Don't run the lib's unit-test harness under `cargo bench` — it can't parse
# criterion args (e.g. --save-baseline) and only the [[bench]] targets matter.
[lib]
bench = false

[dependencies]
glass-core.workspace = true
glass-sandbox-linux.workspace = true
glass-proc-linux.workspace = true
x11rb.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "pixels"
harness = false
