[package]
name = "glass-x11"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# Don't run the lib's unit-test harness under `cargo bench` — it can't parse
# criterion args (e.g. --save-baseline) and only the [[bench]] targets matter.
[lib]
bench = false

[dependencies]
glass-core.workspace = true
# The desktop-a11y capability signal (AT-SPI launcher present) lives with the a11y reader
# and its doctor. This backend->a11y-reader direction mirrors glass-windows -> glass-a11y-windows
# (which is acyclic). Here it forms a Cargo-legal *dev*-dependency cycle: glass-a11y-linux
# dev-depends back on this crate (for its integration tests), and Cargo permits a cycle whose
# reverse edge is a dev-dependency.
glass-a11y-linux.workspace = true
glass-sandbox-linux.workspace = true
glass-proc-linux.workspace = true
glass-dbus-linux.workspace = true
x11rb.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "pixels"
harness = false

[lints]
workspace = true
