# Standalone throwaway crate — NOT part of the rust/ workspace.
# Build/run on the Windows validation box with the MSVC toolchain:
#   cargo run --release -- <subcommand>
# (Cross-check from Linux without a Windows box:
#   cargo check --target x86_64-pc-windows-gnu)
[package]
name = "glass-windows-validation"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[[bin]]
name = "winval"
path = "src/main.rs"

[dependencies]
anyhow = "1"
# xcap drives Windows.Graphics.Capture (WGC) under the hood — the capture path the
# real backend will use — so the capture probes exercise WGC without hand-rolling D3D11.
xcap = "0.0"
image = { version = "0.24", default-features = false, features = ["png"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_HiDpi",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Storage_Xps",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
  "Win32_System_Diagnostics_ToolHelp",
] }

# Embed a Per-Monitor-V2 + long-path manifest (applied before startup, unlike the
# runtime SetProcessDpiAwarenessContext call, which loses to whatever sets it first).
[build-dependencies]
embed-manifest = "1"

# Own workspace root so this never gets absorbed into rust/ workspace resolution.
[workspace]
